
2019-09-15  Ron Norman <rjn@inglenet.com>

	* tree.h: Revert 'lock_mode' back to an 'int'
	* codegen.c,debug.c: Changes for 'lock_mode' being an 'int'

2019-09-15  Ron Norman <rjn@inglenet.com>

	* cobc.h: Add COB_MEM_SIZE as size of cob_mem_struct rounded up to
	          multiple of sizeof(long long)
	* cobc.c: Use COB_MEM_SIZE as size of cob_mem_struct
	          To avoid aborts on system that requires aligned data

2019-09-09  Ron Norman <rjn@inglenet.com>

	* codegen.c: Emit attributes and/or pragma to align 01/77 fields on
	            8 byte boundary

2019-09-04  Ron Norman <rjn@inglenet.com>

	* codegen.c: Set temp-field.data after all declarations to
	            avoid problems with some C compilers (SUN is one)
	* typeck.c: Fix for use of cob_pointer_manip
	* codeoptim.c: Adjust cob_pointer_manip to match usage

2019-09-03  Ron Norman <rjn@inglenet.com>

	* tree.h: Add checks for C compiler presence of __FUNCTION__
	* typeck.c: Fix some #if to include missing conditions

2019-08-28  Ron Norman <rjn@inglenet.com>

	* tree.h: Add flag_usage_defined
	* parser.y: set flag_synchronized for [UN]SIGNED-SHORT/INT/LONG 
	            set flag_synchronized for BINARY-C-LONG
	* field.c: validate that group USAGE is compatible with any field usage

2019-08-27  Simon Sobisch <simonsobisch@gnu.org>

	* cobc.c (process_command_line), flag.def: removed duplicated flag handling
	  by removing cb_flag_arithmetic_osvs and cb_flag_move_ibm

2019-08-26  Ron Norman <rjn@inglenet.com>

	* cobc.h: Add extern cb_mf_ibm_comp
	* tree.h: Add flag_ignore_sync
	* parser.y: set flag_ignore_sync for BINARY-SHORT/LONG/DOUBLE
	* field.c: test flag_ignore_sync for BINARY-SHORT/LONG/DOUBLE
	          which are never SYNCed
	* flag.def : fix help info
	* help.c : display -fibmcomp info

2019-08-17  Simon Sobisch <simonsobisch@gnu.org>

	* typeck.c (cb_encode_program_id), parser.y, codegen.c, cobc.c: changed
	  method signature to remove unnecessary check for path separators and